--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,7 +1,11 @@
-@use "sass:math";
+// Подключение миксинов и переменных
+@import "base/variables";
 
-// Подключение миксинов
-@import "base/mixins";
+// Основные цвета
+:root{
+	--color-black: #000;
+	--color-white: #fff;
+}
 
 // Подключение шрифтов
 //&display=swap - добавить при подключении через плагин
@@ -9,50 +13,7 @@
 // Подключить если есть локальные файлы шрифтов
 // @import "fonts/fonts";
 
-
-// Шрифт по умолчанию
-$fontFamily: "";
-$fontSize: rem(14); // где 14(px) - размер шрифта по умолчанию из макета
-
-// Основные цвета
-:root{
-	--color-black: #000;
-	--color-white: #fff;
-}
-// НАСТРОЙКИ
-// Минимальная ширина страницы
-$minWidth: 320;
-// Ширина полотна (макета)
-$maxWidth: 1920;
-// Ширина ограничивающего контейнера (0 = нет ограничения)
-$maxWidthContainer: 1110;
-// Общий отступ у контейнера
-// (30 = по 15px слева и справа, 0 = нет отступа)
-$containerPadding: 20;
-
-// Ширина срабатывания первого брейкпоинта
-$containerWidth: $maxWidthContainer + $containerPadding;
-
-// Брейк-поинты
-$pc: em($containerWidth); // ПК, ноутбуки, некоторые планшеты в горизонтальном положении
-$tablet: em(991.98); // Планшеты, некоторые телефоны в горизонтальном положении
-$mobile: em(767.98); // Телефоны L
-$mobileSmall: em(479.98); // Телефоны S
-$grid-breakpoints: (
-  mobileSmall: 480em, // Телефоны S 480px
-  mobile: 768em, // Телефоны L 768px
-  tablet: 992em, // Планшеты, некоторые телефоны в горизонтальном положении 992px
-  laptop: 1024em, // Ноутбуки S 1024px
-  laptop-xl: 1200em, // Ноутбуки L 1200px
-  pc: 1130em // ПК $containerWidth
-);
-
-// Тип адаптива:
-// 1 = отзывчивость (у контейнера нет брейкпоинтов),
-// 2 = по брейк-поинтам (контейнер меняет свою ширину по брейк-поинтам)
-$responsiveType: 1;
-
-// Обнуление и общие параметры ============================================================================================================================================================================================== =============================================================================================== ===============================================================================================
+// Обнуление и общие параметры
 @import "base/null";
 
 body {
@@ -67,13 +28,21 @@ body {
 }
 // Оболочка
 .wrapper {
+	display: grid;
+	grid-template-columns: rem(100) 1fr;
+	grid-template-rows: rem(100) 1fr;
 	min-height: 100%;
-	display: flex;
-	flex-direction: column;
 	overflow: hidden;
 	// Прижимаем footer
+	> header{
+		grid-column: 2;
+	}
+	> aside{
+		grid-row: 1 / span 2;
+		background-color: #FFD642;
+	}
 	> main {
-		flex: 1 1 auto;
+		grid-column: 2;
 	}
 	// Фикс для слайдеров
 	// > * {
@@ -82,8 +51,8 @@ body {
 }
 // Ограничивающий контейнер
 .js-focus-visible :focus-visible{
-	transition: outline .1s ease 0s;
-  outline: rem(3) solid var(--colorDarkRaspberry);
+	// transition: outline .1s ease 0s;
+  // outline: rem(3) solid var(--colorDarkRaspberry);
 }
 .js-focus-visible :focus:not(.focus-visible){
   outline: none
@@ -104,7 +73,7 @@ body {
 			margin: 0 auto;
 		}
 		@if ($containerPadding>0) {
-			padding: 0 rem(math.div($containerPadding, 2));
+			padding: 0 rem($containerPadding / 2);
 		}
 	}
 } @else {
@@ -116,7 +85,7 @@ body {
 			box-sizing: content-box;
 		} @else {
 			@if ($containerPadding>0) {
-				padding: 0 rem(math.div($containerPadding, 2));
+				padding: 0 rem($containerPadding / 2);
 			}
 		}
 		@media (max-width: $pc) {
@@ -128,7 +97,7 @@ body {
 		@media (max-width: $mobile) {
 			max-width: none;
 			@if ($containerPadding>0 and $maxWidthContainer>0) {
-				padding: 0 rem(math.div($containerPadding, 2));
+				padding: 0 rem($containerPadding / 2);
 			}
 		}
 	}
